[package]
name = "rs_unit"
version = "0.0.2"
authors = ["Marius Wilms <info@mariuswilms.dev>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mawilms/rs-unit"
description = """
RsUnit is a testing crate similar to Elixirs ExUnit.
"""
keywords = ["testing", "bdd", "tdd"]
categories = ["development-tools", "development-tools::testing", "development-tools::profiling"]

[dependencies]
syn = { version = "^1", features = ["full", "extra-traits"]}
quote = "^1"
proc-macro2 = "^1"

[lib]
path = "src/lib.rs"
proc-macro = true
